Add browser WASM JDT LS package